<resources>
    <string name="app_name">HelpinOut</string>
    <string name="label_app_name"><![CDATA[<font color=#EE6B6B>Helpin</font><font color=#4F5065>Out</font> ]]></string>
    <string name="all_right_reserved">© Helpinout. All rights reserved.</string>
    <string name="website_name">www.helpinout.org</string>
    <string name="instruction_text"><![CDATA[<font color=#EE6B6B>Ask for Help</font> <br/> Offer Help<br/><br/> Find help-givers and help-seekers<br/>around you]]></string>
    <string name="btn_continue">Continue</string>
    <string name="label_enter_your_mobile_no">Enter your mobile number</string>
    <string name="label_login">Login / Signup</string>
    <string name="by_signing_you_are_agree">By signing up you agree to</string>
    <string name="terms_Of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="toast_error_phone_number">Please enter phone number</string>
    <string name="toast_error_invalid_phone_number">Please enter valid phone number</string>
    <string name="label_enter_otp">Enter OTP</string>
    <string name="button_verify">Verify</string>
    <string name="retry_msg">Resend OTP</string>
    <string name="toast_error_please_enter_otp">Please enter OTP</string>
    <string name="you_can_try_max_try">You can try maximum %1$s otp</string>
    <string name="otp_send_success">OTP sent successfully</string>
    <string name="otp_send_to">OTP code sent to %1$s</string>
    <string name="change_phone_number">Change the phone number</string>
    <string name="label_register">Register</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_visible_text">Let my contact number be visible to help seekers.</string>
    <string name="label_representing_as_org">I represent an organization</string>
    <string name="label_org_name">Organization Name</string>
    <string name="label_unit_division">Unit / Division / Function / Location</string>
    <string name="label_start">Start</string>
    <string name="toast_error_please_enter_first_name">Please enter your First Name</string>
    <string name="toast_error_please_enter_last_name">Please enter your Last Name</string>
    <string name="toast_error_please_enter_organization_name">Please enter Organization Name</string>
    <string name="toast_error_please_enter_unit_division">Please enter Unit / Division / Function / Location</string>
    <string name="toast_error_please_choose_org_type">Please choose organization type</string>
    <string name="toast_success_registration_success">Registration successful</string>
    <string name="org_type0">Organization type</string>
    <string name="org_type1">Commercial Organization</string>
    <string name="org_type2">Community Organization</string>
    <string name="org_type3">Government</string>
    <string name="org_type4">Health Organization</string>
    <string name="org_type5">Non-profit Organization</string>
    <string name="org_type6">Other</string>
    <string name="org_types_index0">-1</string>
    <string name="org_types_index1">1</string>
    <string name="org_types_index2">2</string>
    <string name="org_types_index3">3</string>
    <string name="org_types_index4">4</string>
    <string name="org_types_index5">5</string>
    <string name="org_types_index6">0</string>
    <string name="update_profile">Update profile</string>
    <string name="toast_success_update_success">Profile updated successfully</string>
    <string name="identify_location">Confirm your location above, then select below</string>
    <string name="title_home">Home</string>
    <string name="ask_for_help">Ask For Help</string>
    <string name="offer_help">Offer Help</string>
    <string name="title_my_request">My Requests</string>
    <string name="title_my_offers">My Offers</string>
    <string name="title_profiles">Profile</string>
    <string name="language">Language</string>
    <string name="title_about">About</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_form">Form</string>
    <string name="toast_press_again_to_exit">Please click BACK again to exit</string>
    <string name="you_are_here">You are here</string>
    <string name="change">Change</string>
    <string name="enable_location">Please enable your location. HelpinOut will not work otherwise.</string>
    <string name="label_app_need_location_permission">Application needs location permission, please allow location access.</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
    <string name="label_location">Enable location</string>
    <string name="label_permission">Allow permission</string>
    <string name="request_near_me_home">%1$s Help Givers match your requests <b>!</b></string>
    <string name="offer_near_me_home">%1$s Help Seekers match your offers <b>!</b></string>
    <string name="label_send_mail">Send mail</string>
    <string name="invalid_email_id">Please enter valid email id</string>
    <string name="email_send_success">Email sent successfully</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="kannad">ಕನ್ನಡ</string>
    <string name="marathi">मराठी</string>
    <string name="gujrati">ગુજરાતી</string>
    <string name="tamil">தமிழ்</string>
    <string name="telugu">తెలుగు</string>
    <string name="russian">русский</string>
    <string name="update_language">Update language</string>
    <string name="language_update_success">Language update successful</string>
    <string name="toast_error_internet_issue">Please check your internet connection and try again</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="about">About</string>
    <string name="label_logs">Crash logs</string>
    <string name="google_maps_key">AIzaSyDLPRUnByJfCoHVaVyXMq5ehv_Br7L2WL8</string>
    <string name="food">Food</string>
    <string name="people">People</string>
    <string name="shelter">Shelter</string>
    <string name="med_ppe">Med PPE</string>
    <string name="testing">Testing</string>
    <string name="medicines">Medicines</string>
    <string name="ambulance">Ambulance</string>
    <string name="medical_equipment">Medical Equipment</string>
    <string name="other_things">Other things</string>
    <string name="toolbar_need_help_with">Seek help for...</string>
    <string name="email_title"><![CDATA[Obtain detailed data of all <b>requests received</b> in tabular format:]]></string>
    <string name="toolbar_offer_help_with">Offer help with...</string>
    <string name="request_near_me">%1$s requests near me</string>
    <string name="request_total">%1$s Total</string>
    <string name="hint_enter_item">Enter items</string>
    <string name="hint_qty">Qty</string>
    <string name="add_more_items">+ Add more </string>
    <string name="we_can_pay">We Can Pay</string>
    <string name="we_can_not_pay">We Cannot Pay</string>
    <string name="volunteers">Volunteers</string>
    <string name="technical_personnel">Technical Personnel</string>
    <string name="we_charge">We Charge</string>
    <string name="for_free">For Free</string>
    <string name="hint_conditions">Enter constraints on timings, delivery, selection ... ANY information useful for the help seekers.</string>
    <string name="alert_msg_please_wait">Please wait...</string>
    <string name="rate">Rate</string>
    <string name="report_block">Report / Block</string>
    <string name="canceled">Cancel</string>
    <string name="request_confirmation"><![CDATA[Your Request for Help has been registered.<br/><br/> Would you like to search for Help-Givers in your location?]]></string>
    <string name="offer_confirmation"><![CDATA[Your Offer to Help has been registered.<br/><br/> Would you like to search for Help-Seekers in your location?]]></string>
    <string name="note_to_requester">Note to Help Seekers</string>
    <string name="note_to_provider">Note to Help Givers</string>
    <string name="toast_delete_success">Cancel successful</string>
    <string name="request_send_to">Requests have been sent to</string>
    <string name="help_offers_received_from">Help offers received from</string>
    <string name="offer_send_to">Offers have been sent to</string>
    <string name="help_request_received_from">Help requests received from</string>
    <string name="request_help_text">Your number has been shared with them.  They will call you if they can help you</string>
    <string name="view_details">View details</string>
    <string name="offer_help_text">Your number has been shared with them.  They will call you if they need your help</string>
    <string name="call_them">Call\nthem</string>
    <string name="can_pay">Can pay</string>
    <string name="can_not_pay">Cannot pay</string>
    <string name="free">Free</string>
    <string name="not_free">Not free</string>
    <string name="offer_help_to_every_one">Offer help to everyone in the map area</string>
    <string name="comment">Comments</string>
    <string name="submit">Submit</string>
    <string name="help_from_them">Should others help them?</string>
    <string name="help_from_them_request">Should others take help from them?</string>
    <string name="rating_success">Rating successful</string>
    <string name="delete_confirmation">Are you sure you want to cancel ?</string>
    <string name="no_request_sent"><![CDATA[Your request was registered, but no direct request has been sent to anyone yet.<br/><br/> Others may offer to help you when they see your request on the map]]></string>
    <string name="no_offer_sent"><![CDATA[Your offer was registered, but no direct offer has been sent to anyone yet.<br/><br/> Others may request your help when they see your offer on the map<br/><br/> This request will remain active until you cancel it]]></string>
    <string name="no_offer_sended">You have not yet offered to help.</string>
    <string name="label_no_request_send">You have not yet requested for help.</string>
    <string name="cancel_this_request">Cancel this request</string>
    <string name="cancel_this_offer">Cancel this offer</string>
    <string name="request_send_success">Requests sent successfully</string>
    <string name="offer_send_success">Offers sent successfully</string>
    <string name="note">Note:</string>
    <string name="offers_received">Offers received</string>
    <string name="requests_received">Requests received</string>
    <string name="requests_sent">Requests sent</string>
    <string name="offer_sent">Offers sent</string>
    <string name="search_for_help_givers">Search for Help Givers</string>
    <string name="search_for_help_seeker">Search for Help Seekers</string>
    <string name="new_matches">New matches</string>
    <string name="select_help_provider">Select Help Givers</string>
    <string name="select_help_requester">Select Help Seekers</string>
    <string name="phone_number_will_be_send_to_provider">Your phone number will be sent to these help-givers</string>
    <string name="phone_number_will_be_send_to_requester">Your phone number will be sent to these help-seekers</string>
    <string name="send_request">Send Request</string>
    <string name="label_app_version">App version: %1$s</string>
    <string name="version_date">Version date: %1$s</string>
    <string name="app_install_date">App install date: %1$s</string>
    <string name="someone_else">Someone else</string>
    <string name="my_self">Myself</string>
    <string name="who_need_helps">Who needs help?</string>
</resources>