<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar"
        android:visibility="gone" />

    <include
        android:id="@+id/layout_logo"
        layout="@layout/layout_logo"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/tv_register"
                style="@style/StyleTextView.Bold"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/label_register"
                android:textAlignment="center" />

            <com.google.android.material.textfield.TextInputLayout style="@style/StyleTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    style="@style/StyleEditTextFull"
                    android:hint="@string/label_first_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/StyleTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    style="@style/StyleEditTextFull"
                    android:hint="@string/label_last_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chk_number_visible"
                style="@style/StyleCheckBox"
                android:layout_marginTop="@dimen/_25sdp"
                android:checked="true"
                android:padding="@dimen/_4sdp"
                android:text="@string/label_visible_text" />

            <CheckBox
                android:id="@+id/chk_as_organization"
                style="@style/StyleCheckBox"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="@dimen/_4sdp"
                android:text="@string/label_representing_as_org" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_org_name"
                style="@style/StyleTextInput"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_org_name"
                    style="@style/StyleEditTextFull"
                    android:hint="@string/label_org_name"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_org_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/spinner_background"
                android:entries="@array/org_types"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_unit_division"
                style="@style/StyleTextInput"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_unit_division"
                    style="@style/StyleEditTextFull"
                    android:hint="@string/label_unit_division"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/StyleLoginButton"
                android:text="@string/label_start"
                app:layout_constraintTop_toBottomOf="@+id/layout_number" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>