<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_20sdp">

    <org.helpinout.billonlights.view.view.HelpInOutTextView
        android:id="@+id/tv_title"
        style="@style/StyleTextViewNormal"
        android:layout_width="0dp"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/request_confirmation"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_yes"
        style="@style/StyleLoginButtonPrimaryRevert"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/label_yes"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/button_no"
        style="@style/StyleLoginButtonPrimary"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/label_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_yes"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>