<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_bg"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvInstruction"
        style="@style/StyleTextView"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/_10sdp"
        android:text="@string/who_need_helps"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_self"
        style="@style/StyleLoginButtonPrimaryRevert"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/my_self"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/someone_else"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />

    <Button
        android:id="@+id/someone_else"
        style="@style/StyleLoginButtonPrimary"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/someone_else"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/my_self"
        app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />
</androidx.constraintlayout.widget.ConstraintLayout>