<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/layout_logo"
        layout="@layout/layout_logo" />

    <TextView
        android:id="@+id/tv_otp_sms"
        style="@style/StyleTextView"
        android:layout_marginTop="@dimen/_25sdp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_logo"
        tools:text="@string/otp_send_to" />

    <TextView
        android:id="@+id/tv_otp"
        style="@style/StyleTextView.Bold"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/label_enter_otp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_sms" />


    <org.helpinout.billonlights.view.view.OtpEditText
        android:id="@+id/edt_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp" />

    <TextView
        android:id="@+id/tv_timer"
        style="@style/StyleTextView"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/edt_otp" />

    <Button
        android:id="@+id/btn_verify"
        style="@style/StyleLoginButton"
        android:text="@string/button_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer" />

    <org.helpinout.billonlights.view.view.HelpInOutTextView
        android:id="@+id/tv_change_phone_number"
        style="@style/StyleTextViewNormal"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/change_phone_number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_verify" />


</androidx.constraintlayout.widget.ConstraintLayout>