<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_10sdp"
    android:paddingTop="@dimen/_20sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_20sdp">

    <TextView
        android:id="@+id/tv_title"
        style="@style/StyleTextView"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/delete_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_expend_collapse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_expend_collapse"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <Button
        android:id="@+id/button_yes"
        style="@style/StyleLoginButtonPrimaryRevert"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/label_yes"
        app:layout_constraintEnd_toStartOf="@+id/button_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/button_no"
        style="@style/StyleLoginButtonPrimary"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/label_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_yes"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>